<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_bottom"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_alignParentBottom="true"
    android:baselineAligned="true"
    android:orientation="horizontal">

    <!-- 返回产品列表 -->
    <RelativeLayout
        android:id="@+id/rl_favor"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_orange_dark"
        android:paddingBottom="5dp">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_favor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="{fa-arrow-circle-o-left}"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/text_general_back"
            android:textSize="24sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_shop_cart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/aliPayBlue"
        android:paddingBottom="5dp">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_shop_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="{fa-shopping-cart}"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shopping_cart_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/text_cart"
            android:textSize="24sp" />

        <com.example.smartbroecommerce.main.product.CircleTextView
            android:id="@+id/tv_shopping_cart_amount"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/icon_shop_cart"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/icon_shop_cart"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/white"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_add_shop_cart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center_horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/rl_add_shop_cart_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/text_add_to_cart"
            android:textColor="@android:color/white"
            android:textSize="32sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_quick_checkout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/weChatGreen"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/text_quick_checkout"
            android:textColor="@android:color/white"
            android:textSize="32sp"/>
    </RelativeLayout>
</android.support.v7.widget.LinearLayoutCompat>