<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_machine_init_wrap"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/launcher_13"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.AppCompatTextView
        android:textStyle="bold"
        android:textSize="80sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/init_title"
        android:background="@color/bluebg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/edittext"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:hint="@string/init_hint"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <!-- 确认初始化按钮 -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_confirm_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/bluebg"
        android:gravity="center"
        android:padding="12dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/general_confirm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 测试功能的面板 -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_open_serial_port_one"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/lightGray"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:text="投币器使/禁能"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_open_serial_port_two"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/lightGray"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:text="找零测试"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_open_plc"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/lightGray"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:text="@string/testing_plc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 测试功能的面板 -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_open_reader_keep_alive"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/lightGray"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:text="扫描枪使能"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reader_close"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/lightGray"
            android:gravity="center"
            android:padding="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:text="扫描枪禁能"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/tv_console"
            android:padding="8dp"
            />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>