<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/et_coupon_code"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:textColor="@color/colorRed"
        android:gravity="center"
        android:ems="10"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="123dp"
        android:textSize="40sp"
        android:text="@string/text_dont_use_coupon"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="160dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_key1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="1"/>
            <Button
                android:id="@+id/btn_key2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="2"/>
            <Button
                android:id="@+id/btn_key3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:text="3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_key4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="4"/>
            <Button
                android:id="@+id/btn_key5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="5"/>
            <Button
                android:id="@+id/btn_key6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:text="6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_key7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="7"/>
            <Button
                android:id="@+id/btn_key8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="8"/>
            <Button
                android:id="@+id/btn_key9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:text="9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_key_delete"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="@string/key_delete"/>
            <Button
                android:id="@+id/btn_key0"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:text="0"/>
            <Button
                android:id="@+id/btn_key_confirm"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:text="@string/key_ok"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_key_cancel_delivery"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:background="#40000000"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/text_cancel"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>